# m2020-urdf-models

./: CMakeLists.txt  package.xml
behaviors/: startup_pose.xml
config/ingenuity/: ingenuity.srdf  ingenuity_controls.yaml  ingenuity_navigation.yaml  ingenuity_pid.yaml  joint_limits.yaml
config/perseverance/: ingenuity_navigation.yaml  perseverance.srdf  perseverance_controllers.yaml  perseverance_controls.yaml  perseverance_navigation.yaml  perseverance_pid.yaml  perseverance_rviz_pid.yaml  pointcloud_filter_ns_params.yaml  pointcloud_filter_params.yaml
include/m2020_urdf_models/: mhs_gazebo_plugin.h
launch/: dual_ingenuity_demo.launch  dual_perseverance_demo.launch  fetch_affordances.launch  fetch_config.launch  fetch_navigation.launch  perseverance_config.launch  perseverance_controls.launch  perseverance_demo.launch  perseverance_ingenuity_demo.launch  perseverance_navigation.launch  perseverance_planner_node.launch  rover_display.launch  simple_ground_display.launch
launch/ingenuity/: ingenuity_config.launch  ingenuity_controls.launch  ingenuity_demo.launch  ingenuity_planner_node.launch
launch/perseverance/: perseverance_bt.launch  perseverance_cloud_filter.launch  perseverance_config.launch  perseverance_config_gazebo.launch  perseverance_controls.launch  perseverance_demo.launch  perseverance_planner_node.launch
mhs/meshes/: MHS_Leg01_v16.dae  MHS_Leg02_v16.dae  MHS_Leg03_v16.dae  MHS_Leg04_v16.dae  ingenuity_all_in_one_decimated.dae
models/simple_ground/: simple_ground.dae
rover/meshes/: .gitignore  AbradingBitInTurretAtZeroFeed.dae  Arm_LINK_5.dae  CenterDifferential.dae  CenterDifferential_low_res.stl  ContextImager_Cap.dae  CoringBitInTurretAtZeroFeed.dae  DrillCorrerAssy.dae  HGA_AZ.dae  HGA_EL.dae  LaunchBitInTurretAtZeroFeed.dae  Left_Bogie.dae  Left_Rocker.dae  Left_Rocker_low_res.stl  MHS_DebrisShield.dae  RSM.dae  RSM_Head.dae  RegolithBitInTurretAtZeroFeed.dae  Right_Bogie.dae  Right_Rocker.dae  StabilizerFarInTurret.dae  StabilizerNearInTurret.dae  Steer_LeftFront.dae  Steer_LeftRear.dae  Wheel_LeftRear.dae  (+8 more)
rviz/: dual_ingenuity.rviz  dual_perseverance.rviz  ground.rviz  ingenuity.rviz  perseverance.rviz  perseverance_ingenuity.rviz  perseverance_ns.rviz  rover.rviz
scripts/: blade_spinner.py  blender_conversion.py  blender_conversion_obj.py
src/: mhs_gazebo_plugin.cpp
urdf/: m2020.gazebo.urdf.xacro  m2020.sim.urdf.xacro  m2020.traclabs.urdf.xacro  m2020.urdf.xacro  mhs.sim.urdf.xacro  mhs.urdf.xacro  simple_ground.xacro
worlds/: simple_asphalt.world
(+31 files in other folders)
