<?xml version="1.0"?>
<package format="2">
  <name>m2020_urdf_models</name>
  <version>0.0.0</version>
  <description>The m2020_urdf_models package</description>

  <maintainer email="ana@traclabs.com">Ana C. Huaman Quispe</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>

</package>
